addition of heroku index

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <h5 class="text-white">for 60 months</h5>
                                  </h3>
                               </div>
-                              <button type="button" class="btn mt-1" id="free_quote_btn"
+                              <button type="button" class="btn mt-1 text-white" id="free_quote_btn"
                                  style="width: 100%; background: coral">
                                  FREE QUOTE
                               </button>
