addition of heroku index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <link rel="apple-touch-icon" href="images/icon-red/apple-touch-icon-57x57.png" />
    <link rel="apple-touch-icon" sizes="72x72" href="images/icon-red/apple-touch-icon-72x72.png" />
    <link rel="apple-touch-icon" sizes="114x114" href="images/icon-red/apple-touch-icon-114x114.png" />
+   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
 
    <!--All CSS Link-->
    <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -41,7 +42,9 @@
             <div class="col-lg-12 col-12">
                <!-- <div class="col-lg-9 col-4 text-right"> -->
                <!--Mobile Menu -->
-               <div id="mobile-menu" class="mobile-menu-lit"></div>
+               <div id="mobile-menu" class="mobile-menu-lit">
+                  <!-- <i class="material-icons">menu</i> -->
+               </div>
 
                <ul id="nav" class="nav-lit text-right">
                   <li>
