addition of heroku index

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
          <div class="row text-center">
             <div class="col-md-2"></div>
             <div class="col-md-10" style="padding: 20px 0px">
-               <p style="font-size: 11px; text-align:justify; line-height:1.3">
+               <p style="font-size: 11px; text-align:justify; line-height:1.3; padding: 0px 8px">
                   The operator of this website does not guarantee that energy savings will result as a use of its
                   service or any service procured through this website. The operator of this website is not an installer
                   or vendor of solar energy products, and is not an agent, representative or broker of installers or
