--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
             <div class="row">
                <!-- Hero Text -->
                <div class="col-lg-6">
-                  <div class="hero-display wow fadeIn">
-                     <div class="hero-display-mdl">
-                        <!-- <h1 class="text-50">ITech Solar Brings <span class="neon-red">YOU</span> to &amp; <span
+                  <!-- <div class="hero-display wow fadeIn">
+                     <div class="hero-display-mdl"> -->
+                  <!-- <h1 class="text-50">ITech Solar Brings <span class="neon-red">YOU</span> to &amp; <span
                               class="neon-red">National Grid</span></h1>
                         <h2 class="hero-custom-mrgn">Super Reliable &amp; Cost Effective</h2> -->
-                        <!-- Button -->
-                        <!-- <a href="index-light.html#about" role="button" class="btn-wht-fxd bttn" data-scroll>See More</a> -->
-                        <!-- <a href="#how-it" style="width: 170px;" role="button" class="btn-red-fxd" data-scroll>Get
+                  <!-- Button -->
+                  <!-- <a href="index-light.html#about" role="button" class="btn-wht-fxd bttn" data-scroll>See More</a> -->
+                  <!-- <a href="#how-it" style="width: 170px;" role="button" class="btn-red-fxd" data-scroll>Get
                            Started</a> -->
-                     </div>
-                  </div>
+                  <!-- </div>
+                  </div> -->
                </div>
                <!--App Image -->
                <div class="col-lg-6 wow">
@@ -673,7 +673,7 @@
          <div class="row text-center">
             <div class="col-md-2"></div>
             <div class="col-md-10" style="padding: 20px 0px">
-               <p style="font-size: 11px; text-align:justify; line-height:1.3; padding: 0px 8px">
+               <p style="font-size: 11px; text-align:justify; line-height:1.3; padding: 0px 25px">
                   The operator of this website does not guarantee that energy savings will result as a use of its
                   service or any service procured through this website. The operator of this website is not an installer
                   or vendor of solar energy products, and is not an agent, representative or broker of installers or
@@ -685,20 +685,8 @@
                   The operator does not endorse, recommend or guarantee the price, product, availability, rates or fees
                   of participating installers. Participating installers may perform credit checks with credit reporting
                   bureaus or obtain consumer reports through alternative providers Participating installers may require
-                  you to pay a fee to cover the costs of any such inquiry. Participating vendors may not offer all solar
-                  energy products and solar energy products may not be available in all states. The states serviced by
-                  this website may change from time to time, without notice. The operator is not affiliated with the
-                  government and this service is not endorsed or sponsored by the government or any participating
-                  vendor. This service is void where prohibited. This website is not an independent consumer protection
-                  update and the content provided hereon is for informational purposes only. Please see the Privacy
-                  Policy and Terms of Use for more information. Consult with your independent legal and financial
-                  advisor before acting on any information provided on this website.
+                  you to pay a fee to cover the costs of any such inquiry.
 
-                  * Environmental benefits based on average household electricity consumption over a 20 year period,
-                  calculated by epa.gov. Estimated savings based on a projected annual utility rate increase of 3.16%
-                  over the life of the system. Actual savings will vary. Savings depends on several factors, including
-                  product type, system production, geography, weather, shade, electricity usage, full utilization of the
-                  30% solar Investment Tax Credit by the system owner, and utility rate structures and rate increases.
 
 
                </p>
